🐛 fix : Fix overflow limit

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   max-width: 90%; 
   margin: 0 auto;
   overflow: auto;
-  max-height: 75vh;
+  max-height: 69vh;
 }
 
 h1 {
